[package]
name = "mangling"
version = "0.1.1"
authors = ["Darren Kulp <darren@kulp.ch>"]
edition = "2018"
keywords = ["mangling", "name-mangling", "identifier"]
categories = ["development-tools", "encoding"]
description = "mangling generates safe, recognizable identifiers from byte streams."
repository = "https://github.com/kulp/mangling"
license = "MIT"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }
codecov = { repository = "kulp/mangling", branch = "develop", service = "github" }

[dev-dependencies]
quickcheck = "0.9"
