[package]
name = "mangling"
version = "0.2.2"
authors = ["Darren Kulp <darren@kulp.ch>"]
edition = "2018"
keywords = ["mangling", "name-mangling", "identifier"]
categories = ["development-tools", "encoding"]
description = "mangling generates safe, recognizable identifiers from byte streams."
repository = "https://github.com/kulp/mangling"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
quickcheck = "0.9"
